Websites/webkit.org/wp-content/themes/webkit/style.css
/* ... */
code.css .attribute,
code.css .identifier,
code.css .preprocessor {
    color: hsl(309.6, 85.8%, 35.9%);
    color: var(--syntax-color-css-property);
}

code.css .keyword {
    color: hsl(0, 0%, 0%);
    color: var(--syntax-color-css-selector);
}
code.css .number {
    color: hsl(248.1, 100%, 40.6%);
    color: var(--syntax-color-css-number);
}

/** Post Typography **/

main {
    width: 100vw;
    max-width: 100%;
    overflow-x: hidden;
    box-sizing: border-box;
    padding: 3rem 0 0;
}

article {
    padding-bottom: 3rem;
}

article::after {
    clear: both;
    content: ' ';
    display: table;
}

main h1 {
    text-align: left;
}

main h1,
article h1,
article h1 a {
    margin: 0 auto 3rem;
    font-size: 5.6rem;
    font-weight: 500;
    letter-spacing: 0.004rem;
    line-height: 1.10746;
    text-align: center;
    text-decoration: none;
    color: hsl(0, 0%, 26.7%);
    color: var(--text-color-heading);
}

article h2 {
    font-size: 3.2rem;
    line-height: 1.09375;
    font-weight: 500;
    letter-spacing: -0.011rem;
    margin: 4rem 0 1rem;
}

article h3 {
    font-size: 2.4rem;
    line-height: 1.09375;
    font-weight: 500;
    letter-spacing: -0.011rem;
}

article h4 {
    font-size: 2.2rem;
    line-height: 1.09375;
    font-weight: 500;
}

article h5 {
    font-size: 2rem;
    line-height: 1.09375;
    font-weight: 500;
}

article h6 {
    font-size: 1.7rem;
    line-height: 1.09375;
    font-weight: 500;
}

article h3,
article h4,
article h5,
article h6 {
    margin-bottom: 0.5rem;
}

article h2 + h3,
article h3 + h4,
article h4 + h5,
article h5 + h6 {
    margin-top: 0;
}

article p,
article div > img,
article pre,
article hr {
    margin-bottom: 3rem;
}

article .byline p {
    font-size: 1.5rem;
    line-height: 3rem;
    margin-bottom: 0;
    color: hsl(240, 2.3%, 56.7%);
    color: var(--text-color-coolgray);
}

article .byline .date {
    font-weight: 900;
}

article .byline .author {
    white-space: nowrap;

}

article table {
    font-size: 1.6rem;
    border-collapse: collapse;
    border-spacing: 0;
    margin: 3rem 0;
    width: 100%;
}

article thead, article tfoot {
    border-top: 1px solid hsl(0, 0%, 73.3%);
    border-top-color: var(--table-top-rule-color);
    border-bottom: 1px solid hsl(0, 0%, 87.8%);
    border-bottom-color: var(--table-rule-color);
}

article tr {
    border-top: 1px solid hsl(0, 0%, 87.8%);
    border-color: var(--table-rule-color);;
}

article tr:first-child {
    border-top: 0 none;
}

article th {
    font-weight: bold;
    vertical-align: bottom;
    text-align: left;

}
article td, th {
    padding: 1.754386%;
}
article th:first-child {
    padding-left: 0;
}

article ol,
article ul {
    padding-left: 3rem;
    margin: 3rem 0;
}

article ol {
    list-style-type: decimal;
}

article ul {
    list-style-type: square;
}

article ul ul,
article ul ol,
article ol ul,
article ol ol {
    margin-top: 0;
    margin-bottom: 0;
}

article blockquote {
    width: 100vw;
    height: auto;
    padding: 0 3rem;
    left: 50%;
    position: relative;
    margin-left: -50vw;
    box-sizing: border-box;
    font-weight: 200;
    font-size: 3rem;
    line-height: 4.2rem;
    text-align: center;
    color: hsl(240, 2.3%, 56.7%);
    color: var(--text-color-coolgray);
}
article blockquote > * {
    max-width: 1140px;
    margin-left: auto;
    margin-right: auto;
}

article blockquote:first-child {
    width: 100%;
    text-align: left;
    margin: 0 auto;
    left: 0;
    padding: 0;
}

.post .bodycopy > p:last-child:after {
    content: " \220E"; /* Tombstone */
    color: hsl(0, 0%, 33.3%);
    color: var(--text-color-medium);
}

article div.note {
    margin-left: -3rem;
    margin-right: -3rem;
    padding: 3rem;
    background-color: hsl(50, 100%, 94%);
    background-color: var(--note-background-color);
    border: 1px solid hsl(40, 100%, 90%);
    border-color: var(--note-border-color);
    color: hsl(30, 90%, 35%);
    color: var(--note-text-color);
    border-radius: 3px;
    margin-bottom: 3rem;
    box-sizing: normal;
}

article .foreword {
    padding: 1.6rem 2.2rem 1.6rem;
    line-height: 2.6rem;
    background-color: hsl(0, 0%, 94.1%);
    background-color: var(--foreword-background-color);
    border: 1px solid hsl(0, 0%, 90.2%);
    border-color: var(--foreword-border-color);
    color: hsl(240, 2.3%, 56.7%);
    color: var(--foreword-text-color);
    border-radius: 3px;
    margin-bottom: 3rem;
    box-sizing: normal;
    font-size: 1.6rem;
    font-style: italic;
}

article .meta .written {
    margin-bottom: 1em;
}

article .meta .written,
article .meta .updated {
    text-align: right;
    font-size: 1.2rem;
    font-style: italic;
    text-transform: uppercase;
}

article .two-columns {
    columns: 2;
    column-gap: 6rem;
    margin: 3rem 0;
}

article .two-columns h2,
article .two-columns h3,
article .two-columns h4,
article .two-columns h5,
article .two-columns h6 {
    break-after: avoid-column; /* https://bugs.webkit.org/show_bug.cgi?id=148814 */
}

article .two-columns p {
    break-inside: avoid-column;
}

/** Post Layout **/

article .byline {
    float: left;
    width: 191px;
    text-align: right;
    padding-right: 4rem;
    box-sizing: border-box;
}

article .bodycopy,
article .meta {
    clear: both;
    width: 66%;
    margin: 0 auto;
    position: relative;
}

article .aligncenter .wp-caption-text {
    right: -50%;
}

article .alignleft {
    float: left;
    margin: 1.5rem 1.5rem 1.5rem 0;
}

article .aligncenter {
    clear: both;
    display: block;
    margin: 0 auto 3rem;
}

article div.aligncenter {
    position: relative;
    float: right;
    right: 50%;
}

article div.aligncenter img {
    position: relative;
    right: -50%;
}

article .alignright {
    float: right;
    margin: 1.5rem 0 1.5rem 1.5rem;
}

article .alignnone {
    display: block;
    float: none;
}
/* ... */

