Fix extra space between title and article body https://bugs.webkit.org/show_bug.cgi?id=206689
Reviewed by Devin Rousso.

* wp-content/themes/webkit/style.css:
(article .meta):
(article .bodycopy,):


Canonical link: https://commits.webkit.org/219708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254998 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Websites/webkit.org/wp-content/themes/webkit/style.css
+++ b/Websites/webkit.org/wp-content/themes/webkit/style.css
@@ -1603,6 +1603,10 @@ article .foreword {
     font-style: italic;
 }
 
+article .meta {
+    clear: both;
+}
+
 article .meta .written {
     margin-bottom: 1em;
 }
@@ -1645,7 +1649,6 @@ article .byline {
 
 article .bodycopy,
 article .meta {
-    clear: both;
     width: 66%;
     margin: 0 auto;
     position: relative;
